# CrossFFI

./: CMakeLists.txt  README.md  build.sh  clean.sh  run.sh
demos/rcp_json/: README.md
runtime/: README.md  lib.cpp  lib.h
src/: main.c
vms/: .gitignore  prepare.sh
vms/Lua/: CMakeLists.txt  README.md
vms/Lua/lua-master/: CMakeLists.txt
vms/Python/: .gitignore  CMakeLists.txt  build.sh  clean.sh  test_python.c
vms/Python/cpython-main/: confdefs.h  conftest.c  conftest.err
vms/QuickJS/: CMakeLists.txt  README.md
